Fix double comparisons for Media Queries

Media queries that require double-based length comparisons weren't handled correctly.
As a result, some media queries weren't matching when they should have.

This CL fixes this issue by:
* Performing the length calculation in a more double-friendly way, by multiplying before dividing rather than the other way around.
* Apply a certain precision to length calculations, so that we could compare double equality.

BUG=604289

Review URL: https://codereview.chromium.org/1904523002

Cr-Commit-Position: refs/heads/master@{#388464}

Former-commit-id: ee8bfd6290293a1b5dbf0813b6b3987f0e1ca545